tests/snapshots/export__export_renders_a_repository_with_nothing_to_export.snap
---
source: tests/export.rs
expression: output.stdout
---
# $schema: https://noirbizarre.github.io/gh-settings/schema/v1/settings.json
# Generated by `gh settings export` from o/r.
# Review before committing: exported files describe current state, not intent.
version: 1
repository:
  description: null
  homepage: null
  private: false
  has_issues: true
  has_wiki: true
  has_projects: true
  has_discussions: false
  is_template: false
  web_commit_signoff_required: false
  allow_merge_commit: true
  allow_squash_merge: true
  allow_rebase_merge: true
  allow_auto_merge: false
  allow_update_branch: false
  delete_branch_on_merge: false
  default_branch: main
